--- a/skill-exchange/package.json
+++ b/skill-exchange/package.json
@@ -3,14 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mapbox/mapbox-gl-geocoder": "^5.0.3",
+    "@mui/base": "^5.0.0-beta.68",
+    "@mui/material": "^6.3.1",
+    "@mui/x-date-pickers": "^7.23.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
     "font-awesome": "^4.7.0",
     "mapbox-gl": "^3.8.0",
     "react": "^18.3.1",
